fix(message): update endpoint name
