# internal/controller/http/v1/chat/chat_routes.go
@@ -21,6 +21,11 @@ func SetupChatRoutes(api *gin.RouterGroup, db *gorm.DB, authUsecase interfaces.A
 	{
 		chats.GET("", chatController.GetUserChats)
 		chats.GET("/:id/messages", chatController.GetChatMessages)
-		chats.POST("/messages", chatController.CreateMessage)
+	}
+	
+	chat := api.Group("/chat")
+	chat.Use(middleware.AuthMiddleware(authUsecase))
+	{
+		chat.POST("/message", chatController.CreateMessage)
 	}
 }
